# Machine-Learning-Classification

./: .gitignore  Projeto.py  README.md  coleta.py  config.ini  dashboard.py  posts.json  pyproject.toml  resultados.json  treino.py
