[tool.poetry]
name = "machine-learning-classification"
version = "0.1.0"
description = "projeto para estudo do modelo de classifição"
authors = ["AntonioFreire203 <freireantonio203@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
praw = "^7.8.1"
config = "^0.5.1"
seaborn = "^0.13.2"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
python-dotenv = "^1.0.1"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
